# project-guardian

./: .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  ROADMAP.md  SECURITY.md  deny.toml
.claude/agents/: code-reviewer.md  doc-writer.md  rust-implementer.md  security-auditor.md  test-engineer.md  ui-ux-designer.md
.github/workflows/: ci.yml  release.yml
crates/guardian-audit/: Cargo.toml
crates/guardian-audit/src/: lib.rs  report.rs
crates/guardian-broker/: Cargo.toml
crates/guardian-broker/src/: capability.rs  credential.rs  keychain.rs  lib.rs  vault.rs
crates/guardian-checker/: Cargo.toml
crates/guardian-checker/src/: lib.rs
crates/guardian-cli/: Cargo.toml
crates/guardian-cli/src/: eval.rs  main.rs  tui.rs
crates/guardian-cli/tests/: exec.rs
crates/guardian-core/: Cargo.toml
crates/guardian-core/src/: lib.rs
crates/guardian-daemon/: Cargo.toml
crates/guardian-daemon/src/: config.rs  lib.rs  main.rs  notify.rs
crates/guardian-mcp-gateway/: Cargo.toml
crates/guardian-mcp-gateway/src/: lib.rs  presidio.rs
crates/guardian-policy/: Cargo.toml
crates/guardian-policy/src/: engine.rs  lib.rs  pack.rs  schema.rs
crates/guardian-proxy/: Cargo.toml
crates/guardian-proxy/src/: ca.rs  lib.rs  server.rs
crates/guardian-sandbox/: Cargo.toml
crates/guardian-sandbox/src/: lib.rs
docs/: changelog.md  hardening.md  integrations.md  owasp-nist-coverage.md  packaging.md  policy-authoring.md  policy-schema.md  testing-with-claude-code.md  threat-model.md  user-guide.md  whitepaper.md
docs/adr/: 0001-rust-over-c.md  0002-act-at-harness-boundary.md  0003-deterministic-enforcement.md  0004-network-proxy.md  0005-privacy-data-handling.md  README.md
docs/architecture/: guardian-audit.md  guardian-broker.md  guardian-checker.md  guardian-cli.md  guardian-core.md  guardian-daemon.md  guardian-mcp-gateway.md  guardian-policy.md  guardian-proxy.md  guardian-sandbox.md
evaluation/: README.md
evaluation/agentdojo/: README.md  banking_policy.toml  guardian_defense.py  requirements.txt  run_eval.py  run_full_e2b.sh  slack_policy.toml  travel_policy.toml  workspace_policy.toml
evaluation/guardianbench/: README.md  cases.json  guardianbench.py  policy.toml
evaluation/inspect/: README.md  guardian_approval.yaml  guardian_approver.py  inspect_policy.toml  requirements.txt  run.sh  run_inspect.py
evaluation/pi/: README.md  guardian-pi.ts  pi_demo_policy.toml
evaluation/redteam/: README.md  redteam_bank.py  redteam_policy.toml
evaluation/results/: agentdojo-banking-gemma-12b-baseline.json  agentdojo-banking-gemma-12b-guardian.json  agentdojo-banking-gemma-e2b-baseline.json  agentdojo-banking-gemma-e2b-guardian.json
examples/claude-code/: README.md  settings.json
examples/packs/: README.md
examples/packs/web-readonly/: web.toml
examples/proxy/: README.md  caveats.example.toml  secrets.example.toml  web-policy.toml
examples/toybank/: README.md  bank-policy.toml  bank-secrets.example.toml  server.py
fuzz/: Cargo.toml
fuzz/fuzz_targets/: parse_toolcall.rs
policies/: README.md
policies/default/: coding-agent.toml  personal-assistant.toml
scripts/demo/: config.toml  fmt_badge.py  gcall.py  guardian-demo.tape  play.sh  policy.toml
ui/: README.md
ui/src/: index.html  main.js
ui/src-tauri/: Cargo.toml  tauri.conf.json
ui/src-tauri/capabilities/: default.json
ui/src-tauri/src/: lib.rs  main.rs
