# Project Guardian — Cargo workspace.
# See ROADMAP.md §2 for the crate layout and the acyclic dependency direction.
[workspace]
resolver = "2"
members = ["crates/*"]
# The Tauri app is its own build (heavy desktop deps); keep it out of the workspace.
exclude = ["ui"]

[workspace.package]
version = "0.0.0"
edition = "2021"
license = "Apache-2.0"
authors = ["Project Guardian contributors"]
rust-version = "1.75"

# Shared external dependency versions. Individual crates opt in with
# `dep = { workspace = true }`. Keep this list minimal; add as crates need them.
[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
anyhow = "1"
toml = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Internal crates (path deps), referenced by dependents via `{ workspace = true }`.
guardian-core = { path = "crates/guardian-core" }
guardian-policy = { path = "crates/guardian-policy" }
guardian-audit = { path = "crates/guardian-audit" }
guardian-checker = { path = "crates/guardian-checker" }
guardian-mcp-gateway = { path = "crates/guardian-mcp-gateway" }
guardian-daemon = { path = "crates/guardian-daemon" }
