[package]
name = "guardian-audit"
description = "Tamper-evident, hash-chained audit log."
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
guardian-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
blake3 = "1.8.5"
rusqlite = { version = "0.40.1", features = ["bundled"] }
# ed25519 signature over the chain head (§9.2): seals the log so a fully-privileged
# attacker can't rewrite every row *and* the head without the (sealed) signing key.
ed25519-dalek = "2"
hex = "0.4"
