[package]
name = "guardian-broker"
description = "Identity & token broker (scoped OAuth, macaroons, keychain) (Phase 3)."
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
# Lightweight verifiable credentials (§8.5): an ed25519-signed identity claim. Full
# W3C VC / DID-method interop (the heavy `ssi` stack) is deferred — see credential.rs.
ed25519-dalek = "2"
hex = "0.4"
getrandom = "0.2"

# OS keychain storage so secrets never live in plaintext on disk. The native
# backends (Apple Keychain, Windows Credential Manager, Linux kernel keyutils) are
# enabled together; keyring target-gates the underlying sys crates internally, so
# only the host platform's backend is actually compiled. linux-native uses kernel
# keyutils (no libsecret/dbus build dependency, so CI stays clean).
# keyring 3.x (MSRV 1.75, matching the workspace); 4.x needs Rust 1.88.
keyring = { version = "3", features = ["apple-native", "windows-native", "linux-native"] }
