[package]
name = "guardian-checker"
description = "Pluggable LLM translator/risk-scorer. Advisory only — never decides allow/deny."
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
guardian-core = { workspace = true }
serde = { workspace = true }
async-trait = "0.1"

[dev-dependencies]
tokio = { workspace = true }
serde_json = { workspace = true }
