[package]
name = "guardian-core"
description = "Canonical action model and decision types for Project Guardian. No I/O, no internal deps."
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
