[package]
name = "guardian-daemon"
description = "Long-running service: the human-in-the-loop approval queue and (later) the IPC server."
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
guardian-core = { workspace = true }
guardian-policy = { workspace = true }
guardian-checker = { workspace = true }
guardian-audit = { workspace = true }
guardian-mcp-gateway = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true, features = ["net", "io-util"] }
async-trait = "0.1"
# Cross-platform local IPC (§9b.3): Unix domain socket on unix, named pipe on
# Windows — one API, so the daemon/UI run on Windows too.
interprocess = { version = "2", features = ["tokio"] }
