[package]
name = "guardian-proxy"
description = "User-space HTTP(S) MITM forward proxy for network policy and provenance (Phase 2)."
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
guardian-core = { workspace = true }
guardian-policy = { workspace = true }
guardian-broker = { workspace = true }
serde_json = { workspace = true }
