[package]
name = "guardian-proxy"
description = "User-space HTTP(S) MITM forward proxy for network policy and provenance (Phase 2)."
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
guardian-core = { workspace = true }
guardian-policy = { workspace = true }
guardian-broker = { workspace = true }
guardian-audit = { workspace = true }
serde_json = { workspace = true }
# Live forward-proxy increment.
hudsucker = { workspace = true }
rcgen = { workspace = true }
http = { workspace = true }
hyper = { workspace = true }
http-body-util = { workspace = true }
bytes = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "sync", "time"] }
