# Tauri desktop app for Project Guardian. Its own workspace (heavy desktop deps),
# detached from the main Cargo workspace via the empty [workspace] table below.
[package]
name = "guardian-ui"
version = "0.0.0"
edition = "2021"
license = "Apache-2.0"
description = "Project Guardian — desktop approval UI (Tauri v2)."

[workspace]

[lib]
name = "guardian_ui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# The control-socket client bridging the UI to the running daemon.
guardian-daemon = { path = "../../crates/guardian-daemon" }
